# NES-Emulator

./: CMakeLists.txt  cpu.cpp  cpu.h  main.cpp  memory.cpp  memory.h  ppu.cpp  ppu.h
c_src/: CMakeLists.txt  Makefile  common.h  common_unit_test.c  cpu.c  cpu.h  cpu_basic_operations.c  cpu_basic_operations.h  cpu_basic_operations_unit_tests.c  cpu_basic_operations_unit_tests.h  cpu_decode_logic.c  cpu_decode_logic.h  cpu_decode_logic_unit_tests.c  cpu_decode_logic_unit_tests.h  cpu_instructions.c  cpu_instructions.h  cpu_operations.c  cpu_operations.h  cpu_unit_tests.c  cpu_unit_tests.h  generate_arrays.pl  main.c  mappers.c  mappers.h  memory_operations.c  memory_operations.h  ppu.c  ppu.h  sdl_interface.c  sdl_interface.h
c_src/cpu/: CMakeLists.txt  Makefile  cmake_install.cmake  common_cpu.h  cpu.c  cpu.h  cpu_basic_operations.c  cpu_decode_logic.c  cpu_instructions.c  cpu_instructions.h  illegal_opcodes.c  illegal_opcodes.h
c_src/memory/: CMakeLists.txt  Makefile  RAM.c  RAM.h  VRAM.c  VRAM.h  cmake_install.cmake  game_loader.c  mappers.c  memory_operations.c  memory_operations.h
c_src/ppu/: CMakeLists.txt  ppu.c  ppu.h
c_src/tools/: generate_arrays.pl  opcodes.txt
c_src/unit_tests/: CMakeLists.txt  Makefile  cmake_install.cmake  common_unit_test.h  cpu_basic_operations_unit_tests.c  cpu_basic_operations_unit_tests.h  cpu_decode_logic_unit_tests.h  cpu_unit_tests.c
cpp_src/: cpu.cpp  cpu.h  main.cpp
include/: RAM.h  VRAM.h  bank_switcher.h  common.h  controller.h  cpu.h  game_loader.h  mapper_0.h  mappers.h  ppu.h  rom_header_parser.h  rom_loader.h  rom_parser.h  sdl_interface.h  sprites.h
src/: .gitignore  CMakeLists.txt  Makefile  RAM.c  VRAM.c  bank_switcher.c  controller.c  cpu.c  cpu_basic_operations.c  game_loader.c  main.c  mapper_0.c  mappers.c  ppu.c  rom_header_parser.c  rom_loader.c  rom_parser.c  sdl_interface.c  sdl_interface.h  sprites.c
src/cpu/: CMakeLists.txt  cpu.c  cpu.h  cpu_decode_logic.h  illegal_opcodes.h
src/memory/: RAM.c  RAM.h  VRAM.c  mappers.c
src/ppu/: CMakeLists.txt  ppu.c  ppu.h  sprites.c  sprites.h
tools/: arrays_out.txt  generate_arrays.pl  opcodes.txt
