set(src_files
    cpu_basic_operations.c
    cpu.c
    cpu_decode_logic.c
    cpu_instructions.c
    rom_loader.c
    illegal_opcodes.c
    main.c
    ppu.c
    RAM.c
    sdl_interface.c
    sprites.c
    VRAM.c
    controller.c
    rom_parser.c
    bank_switcher.c
    mapper_0.c
)
add_library(src ${src_files})
